crates/core/tests/ui/typed_macro/fail/verify_live_param_mismatch.rs
fn main() {
    let _ = babar::command!("SELECT $1::int4", params = (babar::codec::int8,));
}
